--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;600;700;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="assets/css/vendors/bootstrap.css">
+	<link rel="stylesheet" href="assets/css/styles.min.css">
+	<!-- <link rel="stylesheet" href="styles.css"> -->
 	<title>Baseball Scorecard</title>
 </head>
 <body>
@@ -19,13 +20,13 @@
 					<thead>
 						<tr>
 							<th></th>
-							<th><div class="hdr-txt">Baltimore Orioles</div></td>
+							<th><div class="score-hdr">Baltimore Orioles</div></td>
 							<th><span>vs.</span></th>
-							<th colspan="4"><div class="hdr-txt">New York Yankees</div></th>
+							<th colspan="4"><div class="score-hdr">New York Yankees</div></th>
 							<th><span>At:</span></th>
-							<th colspan="7"><div class="hdr-txt">Yankee Stadium, Bronx, NY</div></th>
+							<th colspan="7"><div class="score-hdr">Yankee Stadium, Bronx, NY</div></th>
 							<th><span>Date:</span></th>
-							<th colspan="2"><div class="hdr-txt">9/21/2008</div></th>
+							<th colspan="2"><div class="score-hdr">9/21/2008</div></th>
 						</tr>
 						<tr>
 							<td>#</td>
@@ -63,49 +64,49 @@
 								<div></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 						</tr>
 						<tr>
@@ -122,49 +123,49 @@
 								<div></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 						</tr>
 						<tr>
@@ -181,49 +182,49 @@
 								<div>&nbsp;</div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 						</tr>
 						<tr>
@@ -240,49 +241,344 @@
 								<div>&nbsp;</div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
 							</td>
 							<td>
-								<div class="diamond"></div>
+								<div class="score-diamond"></div>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<div>23</div>
+								<div>&nbsp;</div>
+							</td>
+							<td>
+								<div>Mattingly</div>
+								<div>&nbsp;</div>
+							</td>
+							<td>
+								<div>3</div>
+								<div>&nbsp;</div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<div>14</div>
+								<div>&nbsp;</div>
+							</td>
+							<td>
+								<div>Cano</div>
+								<div>&nbsp;</div>
+							</td>
+							<td>
+								<div>4</div>
+								<div>&nbsp;</div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<div>20</div>
+								<div>&nbsp;</div>
+							</td>
+							<td>
+								<div>Posada</div>
+								<div>&nbsp;</div>
+							</td>
+							<td>
+								<div>2</div>
+								<div>&nbsp;</div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<div>55</div>
+								<div>&nbsp;</div>
+							</td>
+							<td>
+								<div>Matsui</div>
+								<div>&nbsp;</div>
+							</td>
+							<td>
+								<div>7</div>
+								<div>&nbsp;</div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<div>99</div>
+								<div>&nbsp;</div>
+							</td>
+							<td>
+								<div>Judge</div>
+								<div>&nbsp;</div>
+							</td>
+							<td>
+								<div>DH</div>
+								<div>&nbsp;</div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
+							</td>
+							<td>
+								<div class="score-diamond"></div>
 							</td>
 						</tr>
 					</tbody>
