--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="A simple interactive baseball score card.">
+	<meta name="author" content="Tony Bradshaw">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+	<meta property="og:title" content="Interactive Baseball Score Card" />
+	<meta property="og:description" content="A simple interactive baseball score card." />
+	<meta property="og:image" content="assets/img/score-card.jpg" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;600;700;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="assets/css/vendors/bootstrap.css">
 	<link rel="stylesheet" href="assets/css/styles.min.css">
+
 	<title>Baseball Scorecard</title>
 </head>
 <body class="pg">
